# hackathon-2022

./: README.md  pyproject.toml  requirements.txt
api/: views.py
backend/: pyproject.toml
backend/src/rmli/: models.py  views.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: models.tsx  root.tsx  schema.ts  sessions.ts  utils.tsx
frontend/app/routes/: auth.tsx  index.tsx  roast.tsx
frontend/app/routes/stats/: abandoned_dashboards.tsx  inactive_users.tsx  slow_explores.tsx
frontend/app/styles/: app.css
frontend/public/: commentary.json
frontend/styles/: app.css
src/: Procfile
src/rmli/: models.py  views.py
