[tool.poetry]
name = "roast-my-looker-instance"
version = "0.1.0"
description = "Seriously? You read the description for Python packages?"
authors = ["Josh Temple <josh@spectacles.dev>", "Dylan Atlas-Baker <dylan@spectacles.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rmli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
looker-sdk = "^22.20.0"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
backoff = "^2.2.1"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"
isort = "^5.10.1"
flake8 = "^6.0.0"
pytest = "^7.2.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
reportPrivateImportUsage = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
